--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,47 @@
-beautifulsoup4==4.14.2
-certifi==2025.8.3
-charset-normalizer==3.4.3
+# Core scientific stack
+numpy==2.3.3
+scipy==1.16.2
+pandas==2.3.3
+matplotlib==3.10.6
 contourpy==1.3.3
 cycler==0.12.1
 fonttools==4.60.1
-idna==3.10
-joblib==1.5.2
 kiwisolver==1.4.9
-lxml==6.0.2
-matplotlib==3.10.6
-networkx==3.5
-numpy==2.3.3
-oauthlib==3.3.1
 packaging==25.0
-pandas==2.3.3
 pillow==11.3.0
-praw==7.8.1
-prawcore==2.4.0
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-pytz==2025.2
-requests==2.32.5
-requests-oauthlib==2.0.0
+
+# ML
 scikit-learn==1.7.2
-scipy==1.16.2
-six==1.17.0
-soupsieve==2.8
 threadpoolctl==3.6.0
-tweepy==4.16.0
-typing_extensions==4.15.0
-tzdata==2025.2
-update-checker==0.18.0
+joblib==1.5.2
+
+# Graphs
+networkx==3.5
+
+# Parsing / scraping
+beautifulsoup4==4.14.2
+soupsieve==2.8
+lxml==6.0.2
+
+# HTTP stack
+requests==2.32.5
 urllib3==2.5.0
+idna==3.10
+charset-normalizer==3.4.3
+certifi==2025.10.5
+oauthlib==3.3.1
+requests-oauthlib==2.0.0
+
+# Timezones & typing
+pytz==2025.2
+tzdata==2025.2
+typing_extensions==4.15.0
+six==1.17.0
+
+# Reddit / X (Twitter)
+praw==7.8.1
+tweepy==4.16.0
 websocket-client==1.8.0
+update-checker==0.18.0
